# binbit

./: .gitignore  Cargo.toml  README.md
examples/: probe.rs
src/: aig.rs  bv.rs  clause.rs  dimacs.rs  lib.rs  lit.rs  main.rs  preprocess.rs  smt.rs  smtlib.rs  solver.rs  trace.rs
tests/: basic.rs  bit_counting.rs  bitblast_cost.rs  bits_known.rs  comparison_narrowing.rs  correctness_fuzz.rs  incremental.rs  ite_branching.rs  mul_div_bench.rs  mul_opts.rs  smt.rs  smt_extended.rs  smt_metadata.rs  smt_ops.rs  smt_rewrites.rs  smt_v2.rs  solve_minmax.rs  state_merge.rs  symbex_hooks.rs  trace_roundtrip.rs
